--- a/nri/index.html
+++ b/nri/index.html
@@ -60,8 +60,8 @@
                 <h1>NRIのデジタルビジネス戦略</h1>
             </div>
     
-            <p>share</p>
             <div class="share">
+                <p>share</p>
                 <ul>
                     <li><a href="#"><img src="img/twitter.png" alt="Twitter"></a></li>
                     <li><a href="#"><img src="img/facebook.png" alt="Facebook"></a></li>
@@ -87,8 +87,10 @@
             <p><a href="#">デジタルが拓く近未来（NRIのDX）<br>(4.06MB)</a></p>   
         </div>
 
-        <p class="left"><a href="#">＜ビジネスモデルの特徴</a></p>
-        <p class="right"><a href="#">人材が支えるNRT＞</a></p>
+        <div class="move-link">
+            <a href="#" class="move-left">&lt;ビジネスモデルの特徴</p>
+            <a href="#" class="move-right">人材が支えるNRT&gt;</a></p>
+        </div>
 
         <div class="strength">
             <h1>NRIの強み</h1>
@@ -258,7 +260,7 @@
         </div>
 
         <footer>
-            <div class="footer">
+            <div class="footer-menu">
                 <ul>
                     <li><a href="#">免責条項</a></li>
                     <li><a href="#">サイト利用規約</a></li>
@@ -269,8 +271,7 @@
                     <li><a href="#">アクセスマップ</a></li>
                 </ul>
             </div>
-            <p><small>(c) Nomura Research Institute, Ltd. All rights reserved.</small></p>
+            <p class="footer-under"><small>(c) Nomura Research Institute, Ltd. All rights reserved.</small></p>
         </footer>
-    
     </body>
 </html>
